updated blog title

--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # ----------------------- #
 
 url: http://ukanga.github.io
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: Code is Food,
+subtitle: and am hungry!
+author: Ukang'a Dickson
 simple_search: http://google.com/search
 description:
 
